--- a/src/main/webapp/app/bank/dashboard/dashboard.component.html
+++ b/src/main/webapp/app/bank/dashboard/dashboard.component.html
@@ -6,21 +6,29 @@
     <div class="col-md-9">
         <h1 class="display-4">Welcome to your Bank Account</h1>
 
-        <p class="lead">How much would you like to deposit?</p>
+        <ng-container *ngIf="accountService.getAuthenticationState()" >
+            <div>
+                <p class="lead">How much would you like to deposit?</p>
 
-        <!--div [ngSwitch]="isAuthenticated()" -->
-            <form class="block"  [formGroup]="formGroup" >
-                <label id="bank-deposit-label" for="bank-deposit-input">Please set the amount to deposit
+                <form class="block"  [formGroup]="formGroup" >
+                    <label class="col-form-label" for="bank-deposit-input">Please set the amount to deposit</label>
+
+
                     <input type="number" id="bank-deposit-input" formControlName="depositAmount"/>
-                </label>
-                <button type="submit" class="btn-primary" [disabled]="!formGroup.valid" (click)="deposit()">GO</button>
-            </form>
-
-            <div class="alert alert-warning" *ngIf="depositAmountvalue">
-                <span>{{ messageToDisplay }}{{ depositAmountvalue | number :'0.2-2' }}</span>
+                    <button type="submit" class="btn-primary" [disabled]="!formGroup.valid" (click)="deposit()">Validate</button>
+                </form>
+                <ng-container [ngSwitch]="state$ | async">
+                <div class="alert alert-info" *ngSwitchCase="States.LOADING">The transfert is currently Loading ...</div>
+                <div class="alert alert-info" *ngSwitchCase="States.SUCCESS">
+                    <span>Your deposit of {{ depositAmountvalue | number :'0.2-2' }} $ has been taken in account.</span>
+                </div>
+                <div class="alert alert-error" *ngSwitchCase="States.ERROR">
+                    <span>Error while deposing {{ depositAmountvalue | number :'0.2-2' }} $ into your account. Try again later</span>
+                </div>
+                </ng-container>
             </div>
 
-        <!--/div-->
+        </ng-container>
     </div>
 </div>
 
