--- a/src/main/webapp/app/bank/dashboard/dashboard.component.html
+++ b/src/main/webapp/app/bank/dashboard/dashboard.component.html
@@ -7,9 +7,9 @@
         <h1 class="display-4">Welcome to your Bank Account</h1>
 
         <ng-container *ngIf="accountService.getAuthenticationState()">
-            <jhi-operation (userHasValidated)="onUserHasValidatedDeposit($event)" [state]="(depositState$ |async)"></jhi-operation>
+            <jhi-operation [wording]="depositWording" (userHasValidated)="onUserHasValidatedDeposit($event)" [state]="(depositState$ |async)"></jhi-operation>
                 <span >ici un texte</span>
-            <jhi-operation (userHasValidated)="onUserHasValidatedWithdraw($event)" [state]="(withdrawState$ |async)"></jhi-operation>
+            <jhi-operation [wording]="witdrawWording" (userHasValidated)="onUserHasValidatedWithdraw($event)" [state]="(withdrawState$ |async)"></jhi-operation>
         </ng-container>
     </div>
 </div>
