--- a/src/main/webapp/app/bank/operation/operation.component.html
+++ b/src/main/webapp/app/bank/operation/operation.component.html
@@ -1,20 +1,20 @@
 <div>
-    <p class="lead">How much would you like to deposit?</p>
+    <p class="lead">{{wording.title}}</p>
 
     <form class="block"  [formGroup]="formGroup" >
-        <label class="col-form-label" for="bank-input">Please set the amount to deposit</label>
+        <label class="col-form-label" for="bank-input">{{wording.inputLabel}}</label>
 
 
         <input type="number" id="bank-input" formControlName="amount"/>
-        <button type="submit" class="btn-primary" [disabled]="!formGroup.valid" (click)="run()">Validate</button>
+        <button type="submit" class="btn-primary" [disabled]="!formGroup.valid" (click)="run()">{{wording.submitButton}}</button>
     </form>
     <ng-container [ngSwitch]="state">
-        <div class="alert alert-info" *ngSwitchCase="States.LOADING">The transfer is currently Loading ...</div>
+        <div class="alert alert-info" *ngSwitchCase="States.LOADING">{{wording.loadingMessage}}</div>
         <div class="alert alert-success" *ngSwitchCase="States.SUCCESS">
-            <span>Your deposit of {{ amount | number :'0.2-2' }} $ has been taken in account.</span>
+            <span>{{wording.successMessagePrefix}}{{ amount | number :'0.2-2' }}{{wording.successMessageSuffix}}</span>
         </div>
         <div class="alert alert-danger" *ngSwitchCase="States.ERROR">
-            <span>Error while deposing {{ amount | number :'0.2-2' }} $ into your account. Try again later</span>
+            <span>{{wording.errorMessagePrefix}}{{ amount | number :'0.2-2' }}{{wording.errorMessageSuffix}}</span>
         </div>
     </ng-container>
 </div>
