front(ftUS3): finish front basic visuals - [mvn -Pprod clean verify]PASS

--- a/src/main/webapp/app/bank/operation/operation.component.html
+++ b/src/main/webapp/app/bank/operation/operation.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="wording">
-    <p class="lead">{{wording.title}}</p>
+    <p class="row h2">{{wording.title}}</p>
 
     <form class="block"  [formGroup]="formGroup" >
         <label class="col-form-label" for="bank-input">{{wording.inputLabel}}</label>
