--- a/src/main/webapp/app/bank/statements/statements.component.html
+++ b/src/main/webapp/app/bank/statements/statements.component.html
@@ -11,9 +11,10 @@
     </thead>
     <tbody>
     <tr *ngFor="let statement of data">
-        <th scope="row">{{statement.id}}</th>
-        <td>{{statement.amount | number: "2.2"}} $</td>
-        <td>{{ statement.date | date }}</td>
+        <th scope="row">{{statement.label}}</th>
+        <td>{{(statement.type===StatementType.WITHDRAW?-1:1)*statement.amount | number: "2.2"}} $</td>
+        <td>{{ statement.createdDate | date }}</td>
+        <td>{{ statement.createdBy | date }}</td>
     </tr>
     </tbody>
 </table>
