feat(ftUS3): Première version fonctionnelle

--- a/src/main/webapp/app/bank/statements/statements.component.html
+++ b/src/main/webapp/app/bank/statements/statements.component.html
@@ -7,14 +7,15 @@
         <th id="table-operation-id-header">#</th>
         <th id="table-operation-amount-header">Amount</th>
         <th id="table-operation-date-header">Date</th>
+        <th id="table-operation-creator-header">Created by</th>
     </tr>
     </thead>
     <tbody>
     <tr *ngFor="let statement of data">
-        <th scope="row">{{statement.label}}</th>
+        <th scope="row">{{statement.id }}</th>
         <td>{{(statement.type===StatementType.WITHDRAW?-1:1)*statement.amount | number: "2.2"}} $</td>
         <td>{{ statement.createdDate | date }}</td>
-        <td>{{ statement.createdBy | date }}</td>
+        <td>{{ statement.createdBy }}</td>
     </tr>
     </tbody>
 </table>
