feat(ftUS3): Finale avant implementation BDD

--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
@@ -19,7 +19,8 @@
                     <input type="email" class="form-control" id="email" name="email" placeholder="Your email"
                            formControlName="email" #email>
 
-                    <div *ngIf="resetRequestForm.get('email')!.invalid && (resetRequestForm.get('email')!.dirty || resetRequestForm.get('email')!.touched)">
+                    <div
+                        *ngIf="resetRequestForm.get('email')!.invalid && (resetRequestForm.get('email')!.dirty || resetRequestForm.get('email')!.touched)">
                         <small class="form-text text-danger"
                                *ngIf="resetRequestForm.get('email')?.errors?.required">
                             Your email is required.
