--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -22,7 +22,8 @@
                            placeholder="Current password"
                            formControlName="currentPassword">
 
-                    <div *ngIf="passwordForm.get('currentPassword')!.invalid && (passwordForm.get('currentPassword')!.dirty || passwordForm.get('currentPassword')!.touched)" >
+                    <div
+                        *ngIf="passwordForm.get('currentPassword')!.invalid && (passwordForm.get('currentPassword')!.dirty || passwordForm.get('currentPassword')!.touched)">
                         <small class="form-text text-danger"
                                *ngIf="passwordForm.get('currentPassword')?.errors?.required">
                             Your password is required.
@@ -36,7 +37,8 @@
                            placeholder="New password"
                            formControlName="newPassword">
 
-                    <div *ngIf="passwordForm.get('newPassword')!.invalid && (passwordForm.get('newPassword')!.dirty || passwordForm.get('newPassword')!.touched)">
+                    <div
+                        *ngIf="passwordForm.get('newPassword')!.invalid && (passwordForm.get('newPassword')!.dirty || passwordForm.get('newPassword')!.touched)">
                         <small class="form-text text-danger"
                                *ngIf="passwordForm.get('newPassword')?.errors?.required">
                             Your password is required.
@@ -53,7 +55,8 @@
                         </small>
                     </div>
 
-                    <jhi-password-strength-bar [passwordToCheck]="passwordForm.get('newPassword')!.value"></jhi-password-strength-bar>
+                    <jhi-password-strength-bar
+                        [passwordToCheck]="passwordForm.get('newPassword')!.value"></jhi-password-strength-bar>
                 </div>
 
                 <div class="form-group">
@@ -62,7 +65,8 @@
                            placeholder="Confirm the new password"
                            formControlName="confirmPassword">
 
-                    <div *ngIf="passwordForm.get('confirmPassword')!.invalid && (passwordForm.get('confirmPassword')!.dirty || passwordForm.get('confirmPassword')!.touched)">
+                    <div
+                        *ngIf="passwordForm.get('confirmPassword')!.invalid && (passwordForm.get('confirmPassword')!.dirty || passwordForm.get('confirmPassword')!.touched)">
                         <small class="form-text text-danger"
                                *ngIf="passwordForm.get('confirmPassword')?.errors?.required">
                             Your confirmation password is required.
