--- a/src/main/webapp/app/shared/login/login.component.html
+++ b/src/main/webapp/app/shared/login/login.component.html
@@ -24,13 +24,15 @@
 
                 <div class="form-group">
                     <label for="password">Password</label>
-                    <input type="password" class="form-control" name="password" id="password" placeholder="Your password"
+                    <input type="password" class="form-control" name="password" id="password"
+                           placeholder="Your password"
                            formControlName="password">
                 </div>
 
                 <div class="form-check">
                     <label class="form-check-label" for="rememberMe">
-                        <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe" formControlName="rememberMe">
+                        <input class="form-check-input" type="checkbox" name="rememberMe" id="rememberMe"
+                               formControlName="rememberMe">
                         <span>Remember me</span>
                     </label>
                 </div>
