--- a/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
+++ b/src/main/webapp/app/account/password-reset/finish/password-reset-finish.component.html
@@ -32,7 +32,8 @@
                                placeholder="New password"
                                formControlName="newPassword" #newPassword>
 
-                        <div *ngIf="passwordForm.get('newPassword')!.invalid && (passwordForm.get('newPassword')!.dirty || passwordForm.get('newPassword')!.touched)">
+                        <div
+                            *ngIf="passwordForm.get('newPassword')!.invalid && (passwordForm.get('newPassword')!.dirty || passwordForm.get('newPassword')!.touched)">
                             <small class="form-text text-danger"
                                    *ngIf="passwordForm.get('newPassword')?.errors?.required">
                                 Your password is required.
@@ -49,7 +50,8 @@
                             </small>
                         </div>
 
-                        <jhi-password-strength-bar [passwordToCheck]="passwordForm.get('newPassword')!.value"></jhi-password-strength-bar>
+                        <jhi-password-strength-bar
+                            [passwordToCheck]="passwordForm.get('newPassword')!.value"></jhi-password-strength-bar>
                     </div>
 
                     <div class="form-group">
@@ -58,7 +60,8 @@
                                placeholder="Confirm the new password"
                                formControlName="confirmPassword">
 
-                        <div *ngIf="passwordForm.get('confirmPassword')!.invalid && (passwordForm.get('confirmPassword')!.dirty || passwordForm.get('confirmPassword')!.touched)">
+                        <div
+                            *ngIf="passwordForm.get('confirmPassword')!.invalid && (passwordForm.get('confirmPassword')!.dirty || passwordForm.get('confirmPassword')!.touched)">
                             <small class="form-text text-danger"
                                    *ngIf="passwordForm.get('confirmPassword')?.errors?.required">
                                 Your password confirmation is required.
@@ -76,7 +79,8 @@
                         </div>
                     </div>
 
-                    <button type="submit" [disabled]="passwordForm.invalid" class="btn btn-primary">Reset Password</button>
+                    <button type="submit" [disabled]="passwordForm.invalid" class="btn btn-primary">Reset Password
+                    </button>
                 </form>
             </div>
         </div>
