--- a/src/main/webapp/app/admin/audits/audits.component.html
+++ b/src/main/webapp/app/admin/audits/audits.component.html
@@ -11,12 +11,14 @@
                 <div class="input-group-prepend">
                     <span class="input-group-text">from</span>
                 </div>
-                <input type="date" class="form-control" name="start" [(ngModel)]="fromDate" (ngModelChange)="transition()" required/>
+                <input type="date" class="form-control" name="start" [(ngModel)]="fromDate"
+                       (ngModelChange)="transition()" required/>
 
                 <div class="input-group-append">
                     <span class="input-group-text">To</span>
                 </div>
-                <input type="date" class="form-control" name="end" [(ngModel)]="toDate" (ngModelChange)="transition()" required/>
+                <input type="date" class="form-control" name="end" [(ngModel)]="toDate" (ngModelChange)="transition()"
+                       required/>
             </div>
         </div>
     </div>
@@ -28,29 +30,37 @@
     <div class="table-responsive" *ngIf="audits && audits.length > 0">
         <table class="table table-sm table-striped" aria-describedby="audits-page-heading">
             <thead [ngSwitch]="canLoad()">
-                <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="transition.bind(this)" *ngSwitchCase="true">
-                    <th scope="col" jhiSortBy="auditEventDate"><span>Date</span> <fa-icon icon="sort"></fa-icon></th>
-                    <th scope="col" jhiSortBy="principal"><span>User</span> <fa-icon icon="sort"></fa-icon></th>
-                    <th scope="col" jhiSortBy="auditEventType"><span>State</span> <fa-icon icon="sort"></fa-icon></th>
-                    <th scope="col"><span>Extra data</span></th>
-                </tr>
-                <tr *ngSwitchCase="false">
-                    <th scope="col"><span>Date</span></th>
-                    <th scope="col"><span>User</span></th>
-                    <th scope="col"><span>State</span></th>
-                    <th scope="col"><span>Extra data</span></th>
-                </tr>
+            <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="transition.bind(this)"
+                *ngSwitchCase="true">
+                <th scope="col" jhiSortBy="auditEventDate"><span>Date</span>
+                    <fa-icon icon="sort"></fa-icon>
+                </th>
+                <th scope="col" jhiSortBy="principal"><span>User</span>
+                    <fa-icon icon="sort"></fa-icon>
+                </th>
+                <th scope="col" jhiSortBy="auditEventType"><span>State</span>
+                    <fa-icon icon="sort"></fa-icon>
+                </th>
+                <th scope="col"><span>Extra data</span></th>
+            </tr>
+            <tr *ngSwitchCase="false">
+                <th scope="col"><span>Date</span></th>
+                <th scope="col"><span>User</span></th>
+                <th scope="col"><span>State</span></th>
+                <th scope="col"><span>Extra data</span></th>
+            </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let audit of audits">
-                    <td><span>{{ audit.timestamp | date:'medium' }}</span></td>
-                    <td><small>{{ audit.principal }}</small></td>
-                    <td>{{ audit.type }}</td>
-                    <td>
-                        <span *ngIf="audit.data?.message">{{ audit.data.message }}</span>
-                        <span *ngIf="audit.data?.remoteAddress"><span>Remote Address</span> {{ audit.data.remoteAddress }}</span>
-                    </td>
-                </tr>
+            <tr *ngFor="let audit of audits">
+                <td><span>{{ audit.timestamp | date:'medium' }}</span></td>
+                <td><small>{{ audit.principal }}</small></td>
+                <td>{{ audit.type }}</td>
+                <td>
+                    <span *ngIf="audit.data?.message">{{ audit.data.message }}</span>
+                    <span
+                        *ngIf="audit.data?.remoteAddress"><span>Remote Address</span> {{ audit.data.remoteAddress }}</span>
+                </td>
+            </tr>
             </tbody>
         </table>
     </div>
@@ -61,7 +71,9 @@
         </div>
 
         <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="transition()" [disabled]="!canLoad()"></ngb-pagination>
+            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5"
+                            [rotate]="true" [boundaryLinks]="true" (pageChange)="transition()"
+                            [disabled]="!canLoad()"></ngb-pagination>
         </div>
     </div>
 </div>
