--- a/src/main/webapp/app/admin/metrics/metrics.component.html
+++ b/src/main/webapp/app/admin/metrics/metrics.component.html
@@ -3,8 +3,7 @@
         <span id="metrics-page-heading">Application Metrics</span>
 
         <button class="btn btn-primary float-right" (click)="refresh()">
-            <fa-icon icon="sync"></fa-icon>
-            <span>Refresh</span>
+            <fa-icon icon="sync"></fa-icon> <span>Refresh</span>
         </button>
     </h2>
 
